simplification refactor
