# internal/entity/post.go
@@ -1,6 +1,7 @@
 package entity
 
 import (
+	"github.com/danielmunro/otto-community-service/internal/enum"
 	"github.com/danielmunro/otto-community-service/internal/model"
 	"github.com/google/uuid"
 	"github.com/jinzhu/gorm"
@@ -8,16 +9,18 @@ import (
 
 type Post struct {
 	gorm.Model
-	Message
+	Text       string
+	UserID     uint
+	User *User
+	Visibility enum.Visibility
 	Uuid *uuid.UUID `gorm:"type:uuid;default:uuid_generate_v4()"`
 	Reports []*Report `gorm:"polymorphic:Reported;"`
 }
 
 func CreatePost(user *User, post *model.NewPost) *Post {
 	return &Post{
-		Message: Message{
-			UserID: user.ID,
-			Text:   post.Message.Text,
-		},
+		UserID: user.ID,
+		User: user,
+		Text:   post.Text,
 	}
 }
